# typed_matrix

./: CMakeLists.txt  README.md
data/export/: all_colors.json  ref_test.json  space.json  value_test.json
data/xlsx/: sample1.xlsx  space.xlsx
include/: matrix_exporter.h  typed_matrix.h
src/base/: typed_matrix.cpp
src/exporter/: matrix_exporter.cpp
test/: CMakeLists.txt
test/sample_export/: CMakeLists.txt  sample_export.cpp
